# PgBigData

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
assistant/: __init__.py  core.py  server.py
assistant/static/: index.html
dashboard/: app.py  nl_sql.py
deploy/: deploy.sh  nginx-census.datallmai.com.conf
docs/: ARCHITECTURE.md  DESIGN.md  PAYLOAD.md  architecture.html  design.html  index.html  overview.html  payload.html
sql/: 001_schema.sql  002_views.sql  003_pums.sql  004_cces.sql
src/pgbigdata/: __init__.py  cli.py  config.py  db.py
src/pgbigdata/cces/: __init__.py  download.py  loader.py  transform.py  variables.py
src/pgbigdata/census/: __init__.py  client.py  geography.py  loader.py  transform.py  variables.py
src/pgbigdata/pums/: __init__.py  client.py  loader.py  transform.py  variables.py
tests/: test_cces_transform.py  test_pums_transform.py  test_transform.py
